# splaytree

./: .gitignore  splaytree.cabal
src/Data/: SplayTree.hs
test/: Main.hs
