cabal-version: 3.4
name:          splaytree
version:       0.1.6
synopsis:      Provides an annotated splay tree
description:   Annotated splay trees (compare to 2-3 finger trees)
homepage:      http://github.com/JohnLato/splaytree
license:       BSD-3-Clause
license-file:  LICENSE
author:        John W. Lato
maintainer:    jwlato@gmail.com
category:      Data
build-type:    Simple

library
  ghc-options: -Wall
  default-language: Haskell2010
  hs-source-dirs:   src
  exposed-modules:
    Data.SplayTree

  build-depends:
    , base     >=3 && <5
    , deepseq  >=1 && <2

test-suite splaytree-test
  default-language: Haskell2010
  type:             exitcode-stdio-1.0
  main-is:          Main.hs
  hs-source-dirs:   test
  ghc-options:      
  build-depends:
    , base
    , containers
    , QuickCheck
    , hspec
    , splaytree

source-repository head
  type:     git
  location: git://github.com/JohnLato/splaytree.git
